<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:id="@+id/toolbar_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="start"
            android:src="@drawable/left" />

        <TextView
            android:id="@+id/toolbar_back_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_level_select"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/level"
            android:textColor="@color/function_type"
            android:textSize="16sp" />

    </androidx.appcompat.widget.Toolbar>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/chat_message_bg"
        android:padding="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/input_layout"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/preload_message_rv"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/speak_input_iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/preload_message_rv" />

        <Button
            android:id="@+id/btn_speak"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/button_background_not_pressed"
            android:text="@string/start_speak"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/speak_input_iv"
            app:layout_constraintTop_toBottomOf="@id/preload_message_rv" />

        <EditText
            android:id="@+id/text_input_et"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/border_edittext"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/speak_input_iv"
            app:layout_constraintTop_toBottomOf="@id/preload_message_rv" />

        <TextView
            android:id="@+id/btn_polish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/textview_bg"
            android:padding="3dp"
            android:text="@string/polish"
            android:textColor="@color/function_type"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/text_input_et"
            app:layout_constraintTop_toBottomOf="@id/text_input_et" />


        <TextView
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/textview_bg"
            android:padding="3dp"
            android:text="@string/send"
            android:textColor="@color/function_type"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/text_input_et"
            app:layout_constraintLeft_toRightOf="@id/text_input_et"
            app:layout_constraintTop_toTopOf="@id/text_input_et" />


        <TextView
            android:id="@+id/channel_id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/textview_bg"
            android:paddingTop="10dp"
            android:paddingBottom="2dp"
            android:text="@string/channel_id"
            android:textColor="@color/function_type"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/speak_input_iv" />

        <TextView
            android:id="@+id/tokens_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="55dp"
            android:background="@drawable/textview_bg"
            android:paddingTop="10dp"
            android:paddingBottom="2dp"
            android:text="@string/tokens"
            android:textColor="@color/function_type"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/speak_input_iv" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>