<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/message_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:background="@drawable/left_bubble_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ai_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/ai_label"
            android:textColor="@color/gray"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/message_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/translate_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ai_label_tv"
            app:layout_goneMarginBottom="5dp" />

        <TextView
            android:id="@+id/translate_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/gray"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message_tv" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/textview_bg"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:text="@string/tip"
        android:textColor="@color/function_type"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/translate_btn"
        app:layout_constraintStart_toEndOf="@id/message_layout"
        app:layout_constraintTop_toTopOf="@id/message_layout" />

    <TextView
        android:id="@+id/translate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/textview_bg"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:text="@string/translate"
        android:textColor="@color/function_type"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/message_layout"
        app:layout_constraintStart_toEndOf="@id/message_layout"
        app:layout_constraintTop_toBottomOf="@id/tip_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>